refactor(annotation-processor): tidy up Loader/Saver/Deserializer/Serializer inconsistent naming